; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_golomb_list_decoder_init.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_golomb_list_decoder_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_decoder = type { i32, i32, i32, i32, i32*, i64, i32 }

@le_degenerate = common dso_local global i32 0, align 4
@degenerate_decode_int = common dso_local global i32 0, align 4
@le_golomb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @golomb_list_decoder_init(%struct.list_decoder* %0, i32 %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca %struct.list_decoder*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store %struct.list_decoder* %0, %struct.list_decoder** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load %struct.list_decoder*, %struct.list_decoder** %6, align 8
  %12 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %11, i32 0, i32 6
  %13 = load i8*, i8** %9, align 8
  %14 = load i32, i32* %10, align 4
  %15 = call i32 @bread_init(i32* %12, i8* %13, i32 %14)
  %16 = load i32, i32* %7, align 4
  %17 = load %struct.list_decoder*, %struct.list_decoder** %6, align 8
  %18 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load %struct.list_decoder*, %struct.list_decoder** %6, align 8
  %21 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 4
  %22 = load %struct.list_decoder*, %struct.list_decoder** %6, align 8
  %23 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %22, i32 0, i32 2
  store i32 40, i32* %23, align 8
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %35

27:                                               ; preds = %5
  %28 = load i32, i32* @le_degenerate, align 4
  %29 = load %struct.list_decoder*, %struct.list_decoder** %6, align 8
  %30 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %29, i32 0, i32 3
  store i32 %28, i32* %30, align 4
  %31 = load %struct.list_decoder*, %struct.list_decoder** %6, align 8
  %32 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %31, i32 0, i32 5
  store i64 0, i64* %32, align 8
  %33 = load %struct.list_decoder*, %struct.list_decoder** %6, align 8
  %34 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %33, i32 0, i32 4
  store i32* @degenerate_decode_int, i32** %34, align 8
  br label %41

35:                                               ; preds = %5
  %36 = load i32, i32* @le_golomb, align 4
  %37 = load %struct.list_decoder*, %struct.list_decoder** %6, align 8
  %38 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %37, i32 0, i32 3
  store i32 %36, i32* %38, align 4
  %39 = load %struct.list_decoder*, %struct.list_decoder** %6, align 8
  %40 = call i32 @golomb_decoder_init(%struct.list_decoder* %39)
  br label %41

41:                                               ; preds = %35, %27
  ret void
}

declare dso_local i32 @bread_init(i32*, i8*, i32) #1

declare dso_local i32 @golomb_decoder_init(%struct.list_decoder*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
